[package]
name = "grpcweb-proxy-in-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
derive_builder = "0.20.2"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
mockall = "0.13.1"
mockall_double = "0.3.1"
pin-project = "1.1.10"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tower = "0.5.2"
webpki-roots = "1.0.3"
