[package]
name = "grpcweb-proxy-in-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
pin-project = "1.1.10"
tokio = { version = "1.48.0", features = ["full"] }
tonic-web = { git = "https://github.com/exajoy/tonic.git", branch = "master", package = "tonic-web" }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
mockall = "0.13.1"
