[package]
name = "griffin"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
futures-core = { version = "0.3.31", features = ["std"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["capi"] }
hyper-util = { version = "0.1.17", features = [
  "http1",
  "http2",
  "client",
  "server",
  "service",
] }
percent-encoding = "2.3.2"
pin-project = "1.1.10"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = { version = "0.1.41", features = ["log"] }
prost = { version = "0.14.1", optional = true }
futures-util = { version = "0.3.31", features = ["std"], optional = true }
tokio-stream = { version = "0.1.17", features = ["io-util"], optional = true }
tonic = { version = "0.14.2", optional = true }
tonic-web = { version = "0.14.2", optional = true }
tonic-prost = { version = "0.14.2", optional = true }
prometheus = "0.14.0"
scopeguard = "1.2.0"

[dev-dependencies]
# httptest = "0.16.3"

[build-dependencies]
tonic-build = { version = "0.14.2", optional = true }
tonic-prost-build = { version = "0.14.2", optional = true }

[features]
test-support = [
  "prost",
  "futures-util",
  "tokio-stream",
  "tonic",
  "tonic-prost",
  "tonic-web",
  "tonic-build",
  "tonic-prost-build",
]
